Issue 35898: Improvements to Network Drive mapping